# ContainerizedP

./: pyproject.toml
hello_world/: test_hello_world.py
