[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = "A basic Python project that prints 'Hello, world!'"
authors = ["Aalhad <aalhad.patankar@gmail.com>"]
license = "MIT"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.10" 